<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/layout_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_category_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/primaryRed"
                tools:text="1" />

            <TextView
                android:id="@+id/tv_category_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Category Name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_go_to_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryOrange"
                android:padding="4dp"
                android:text="@string/text_go_to_top" />

            <ImageView
                android:id="@+id/iv_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/menu_dropdown"
                android:src="@drawable/ic_dropdown" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewJokes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:visibility="gone"
            tools:listitem="@layout/item_jokes_row"
            tools:visibility="gone" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_jokes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_shimmer_jokes_row" />

                <include layout="@layout/item_shimmer_jokes_row" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddJoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryRed"
            android:padding="4dp"
            android:text="@string/text_add_more_jokes"
            android:visibility="gone"
            app:cornerRadius="8dp"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
