<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingTop="24dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/primaryRed"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingBottom="12dp"
                android:text="@string/main_instruction"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_categories"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/item_shimmer_category_row" />

                    <include layout="@layout/item_shimmer_category_row" />

                    <include layout="@layout/item_shimmer_category_row" />

                    <include layout="@layout/item_shimmer_category_row" />

                    <include layout="@layout/item_shimmer_category_row" />

                    <include layout="@layout/item_shimmer_category_row" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:listitem="@layout/item_category_row" />

            <LinearLayout
                android:id="@+id/layout_error"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/error_image"
                    android:src="@drawable/ic_sad"
                    app:tint="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="24dp"
                    android:paddingBottom="12dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    tools:text="Error!" />

            </LinearLayout>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>